--- a/static/sass/small.sass
+++ b/static/sass/small.sass
@@ -23,13 +23,13 @@ h1
 
 .nav
 	margin-bottom: 0
-	background-color: $gray-mid
+	// background-color: $gray-mid
 	li:first-child
 		padding-top: 6px
 	li:last-child
 		padding-bottom: 6px
 	a
-		padding: 4px 10px
+		padding: 4px 0
 
 .panel
 	padding: 20px
